Portfolio Website with dark Mode_4

--- a/Profil2/styles.css
+++ b/Profil2/styles.css
@@ -74,3 +74,43 @@
     font-size: 16px;
     margin: 15px 0;
 }
+
+.social-media a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background: transparent;
+    border: 2px solid #37a1f2;
+    border-radius:  50%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+    font-size: 20px;
+    color: #37a1f2;
+    margin: 5px 15px 25px 0;
+    transition: .5s
+}
+
+.social-media a:hover {
+    background:  #37a1f2;
+    color:  #f0f3fd;
+}
+
+.btn {
+    display: inline-block;
+    padding: 11px 32px;
+    background: #37a1f2;
+    border: 2px solid #37a1f2;
+    border-radius: 40px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+    font-size: 16px;
+    color: #f0f3fd;
+    letter-spacing: 1px;
+    font-weight: 600;
+    transition: .5s;
+}
+
+.btn:hover {
+    background: transparent;
+    color: #37a1f2;
+}
