--- a/MyPage/Profil3/style.css
+++ b/MyPage/Profil3/style.css
@@ -46,4 +46,10 @@ header {
     border-radius: 10px;
     border: 2px solid #7d2ae8;
     font-weight: 500;
+    transition: .3s;
+}
+
+.btn-talk:hover {
+    color: #7d2ae9;
+    background: transparent;
 }
