--- a/MyPage/Resume/style.css
+++ b/MyPage/Resume/style.css
@@ -9,11 +9,35 @@ body {
     background: #00b6c4;
 }
 
+a {
+    text-decoration: none;
+    margin: 0;
+    padding: 0;
+}
+
+.btn {
+    display: inline-block;
+    padding: 10px 30px;
+    background: #7cf03d;
+    border: 2px solid #7cf03d;
+    border-radius: 40px;
+    box-shadow: 0 0 10px #7cf03d;
+    font-size: 16px;
+    color: #1f242d;
+    font-weight: 600;
+    transition: .5s;
+}
+
+.btn:hover {
+    background: transparent;
+    color: #7cf03d;
+    box-shadow: none;
+}
+
 .container {
     background: #f5f5f5;
     max-width: 800px;
     margin: 60px auto;
-    height: 1250px;
     padding: 20px;
     box-shadow: 0 2px 20px rgba(0, 0, 0, 0.3);
 }
@@ -84,4 +108,31 @@ h2 {
 }
 .right ul li {
     line-height: 2;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+    .container {
+        width: 95%;
+        height: auto;
+    }
+    h2 {
+        font-size: 18px;
+    }
+}
+@media screen and (max-width: 600px) {
+    .main {
+        flex-direction: column;
+    }
+    .left,
+    .right {
+        flex: none;
+        width: 100%;
+    }
+    .container {
+        width: 95%;
+        height: auto;
+    }
+    h2{
+        font-size: 15px;
+    }
 }
